# ImgC

./: .gitignore  Cargo.toml  ImageConverter.py  README.md  build.sh  imgC.py  installer.iss  requirements.txt  support_function.py  test_img.py  test_imgc.py
.github/workflows/: ci.yml  deploy.yml  test.yml
crates/imgc-cli/: Cargo.toml
crates/imgc-cli/src/: main.rs
crates/imgc-cli/tests/: cli.rs
crates/imgc-cli/tests/fixtures/: README.md  sample.heic
crates/imgc-core/: Cargo.toml
crates/imgc-core/src/: encode.rs  lib.rs  load.rs
crates/imgc-wasm/: Cargo.toml
crates/imgc-wasm/src/: lib.rs
web/: app.js  index.html  style.css
