[package]
name = "imgc-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
imgc-core = { path = "../imgc-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# rustc emits bulk-memory / sign-ext / nontrapping-fptoint by default; let wasm-opt accept them.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O",
    "--enable-bulk-memory",
    "--enable-sign-ext",
    "--enable-nontrapping-float-to-int",
]
